<resources>
    <string name="app_name">Surrouding</string>

    <string name="api_key">AIzaSyA23w69VN8NXgAY4v9d9Z6r5BRGGRpjFbI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="surrounding">Surrounding</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="you_must_enter_your_username">you must enter your Username!</string>
    <string name="you_must_enter_your_password">You must enter your Password!</string>
    <string name="you_must_confirm_your_password">You must confirm your Password!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_carrer">Enter your carrer</string>
    <string name="choose_date_of_birth">Choose your date of birth</string>
    <string name="change">Change</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="tell_about_yourself">Tell about yourself</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="remove_picture">Remove picture</string>
    <string name="wait">Please wait</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="you_must_tell_something_about_yourself">You must tell soemthing about yourself</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="nearby_feed">Nearby feed</string>
    <string name="settings">Settings</string>
    <string name="log_out">log out</string>
    <string name="help_and_settings">Help and Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="description">Description</string>
    <string name="what_do_you_wanna_do">What do you wanna do?</string>
    <string name="set_location">Set location</string>
    <string name="set_category">Set category</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
</resources>
