<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account_circle_grey_700_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nearby_feed"
            android:icon="@drawable/ic_my_location_grey_700_24dp"
            android:title="@string/nearby_feed" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications_grey_700_24dp"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/help_and_settings">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_grey_700_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_arrow_back_grey_700_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>