<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thangtv.surrounding.ui.activity.AddPostActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/color_secondary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/what_do_you_wanna_do"
                android:lines="10"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="15"
                android:minLines="5"
                android:textColor="@color/color_primary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="@dimen/icon_right_margin"
                    android:src="@drawable/ic_location_on_grey_700_24dp" />

                <EditText
                    android:id="@+id/edit_location"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/set_location"
                    android:inputType="number"
                    android:textColor="@color/color_accent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="@dimen/icon_right_margin"
                    android:src="@drawable/ic_dns_grey_700_24dp" />

                <EditText
                    android:id="@+id/edit_category"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/set_category"
                    android:inputType="number"
                    android:singleLine="false"
                    android:textColor="@color/color_accent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
